log
Thu 04 May 2023 09:19:38 PM UTC: 
 tests:  0|5
total_score: 0/70
ad45bcf
Thu 04 May 2023 09:25:16 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   55 |     int j;
      |         ^
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
7c60d44
Thu 04 May 2023 09:25:24 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
fa88d9b
Thu 04 May 2023 09:37:51 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|3
total_score: 35/70
dfee333
